--- a/src/app/components/viewer/viewer.component.html
+++ b/src/app/components/viewer/viewer.component.html
@@ -4,7 +4,7 @@
     <nav *ngIf="!isCodeVisible">
       <ul class="nav flex-row nav-pills">
         <li class="nav-item d-flex">
-          <a class="btn btn-sm btn-link" [class.active]="isOpenCode" (click)="isOpenCode = !isOpenCode">
+          <a class="btn btn-sm btn-outline-tertiary" [class.active]="isOpenCode" (click)="isOpenCode = !isOpenCode">
             <span>{{ linkCode }}</span>
           </a>
         </li>
