--- a/src/app/modules/get-started/get-started.component.html
+++ b/src/app/modules/get-started/get-started.component.html
@@ -122,7 +122,7 @@
           </p>
           <div class="d-flex flex-column align-items-end p-0" appClipboard>
             <button
-              class="btn btn-sm btn-outline-link btn-clipboard btn-icon"
+              class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"
             ></button>
             <code highlight-js lang="'bash'">{{ ngxObelisco }}</code>
           </div>
@@ -164,14 +164,14 @@
         <p>Además de importar componente por componente como por ejemplo:</p>
         <div class="d-flex flex-column align-items-end p-0" appClipboard>
           <button
-            class="btn btn-sm btn-outline-link btn-clipboard btn-icon"
+            class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"
           ></button>
           <code highlight-js lang="'typescript'">{{ accessImport }}</code>
         </div>
         <p class="mb-0">Ó Puedes usar este que trae todos los módulos:</p>
         <div class="d-flex flex-column align-items-end p-0" appClipboard>
           <button
-            class="btn btn-sm btn-outline-link btn-clipboard btn-icon"
+            class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"
           ></button>
           <code highlight-js lang="'typescript'">{{ ngxImport }}</code>
         </div>
@@ -189,7 +189,7 @@
           <p>Utilizando el paquete npm:</p>
           <div class="d-flex flex-column align-items-end p-0" appClipboard>
             <button
-              class="btn btn-sm btn-outline-link btn-clipboard btn-icon"
+              class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"
             ></button>
             <code highlight-js lang="'bash'">{{ boxicons }}</code>
           </div>
@@ -197,7 +197,7 @@
           <p>Importando en el archivo angular.json de la siguiente manera:</p>
           <div class="d-flex flex-column align-items-end p-0" appClipboard>
             <button
-              class="btn btn-sm btn-outline-link btn-clipboard btn-icon"
+              class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"
             ></button>
             <code highlight-js lang="'css'">{{ iconImport }}</code>
           </div>
@@ -207,7 +207,7 @@
           </p>
           <div class="d-flex flex-column align-items-end p-0" appClipboard>
             <button
-              class="btn btn-sm btn-outline-link btn-clipboard btn-icon"
+              class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"
             ></button>
             <code highlight-js>{{ boxiconsCDN }}</code>
           </div>
@@ -222,7 +222,7 @@
           <p>Utilizando el paquete npm:</p>
           <div class="d-flex flex-column align-items-end p-0" appClipboard>
             <button
-              class="btn btn-sm btn-outline-link btn-clipboard btn-icon"
+              class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"
             ></button>
             <code highlight-js lang="'bash'">{{ materialIcons }}</code>
           </div>
@@ -232,7 +232,7 @@
           </p>
           <div class="d-flex flex-column align-items-end p-0" appClipboard>
             <button
-              class="btn btn-sm btn-outline-link btn-clipboard btn-icon"
+              class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"
             ></button>
             <code highlight-js>{{ materialIconsCDN }}</code>
           </div>
@@ -249,7 +249,7 @@
         </p>
         <div class="d-flex flex-column align-items-end p-0" appClipboard>
           <button
-            class="btn btn-sm btn-outline-link btn-clipboard btn-icon"
+            class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"
           ></button>
           <code highlight-js>{{ typography }}</code>
         </div>
@@ -280,7 +280,7 @@
         </p>
         <div class="d-flex flex-column align-items-end p-0" appClipboard>
           <button
-            class="btn btn-sm btn-outline-link btn-clipboard btn-icon"
+            class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"
           ></button>
           <code highlight-js>{{ js }}</code>
         </div>
