--- a/src/app/modules/section-components/access/access-simple/page/access-simple-example/access-simple-example.component.html
+++ b/src/app/modules/section-components/access/access-simple/page/access-simple-example/access-simple-example.component.html
@@ -4,7 +4,7 @@
       <o-access title="Acceso" route="/home"></o-access>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard">Copiar</button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard">Copiar</button>
       <code highlight-js>{{ exampleAccessTitleHtml }}</code>
     </div>
   </app-viewer>
@@ -14,7 +14,7 @@
       <o-access title="Acceso" description="Descripción (Opcional)" route="/home"></o-access>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard">Copiar</button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard">Copiar</button>
       <code highlight-js>{{ exampleAccessDescriptionHtml }}</code>
     </div>
   </app-viewer>
@@ -24,7 +24,7 @@
       <o-access title="Acceso" icon="bx bxs-info-circle" route="/home" description="Descripción (Opcional)"></o-access>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard">Copiar</button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard">Copiar</button>
       <code highlight-js>{{ exampleAccessIconHtml }}</code>
     </div>
   </app-viewer>
@@ -45,7 +45,7 @@
       </div>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard">Copiar</button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard">Copiar</button>
       <code highlight-js>{{ exampleAccessSizesHtml }}</code>
     </div>
   </app-viewer>
@@ -58,7 +58,7 @@
       <o-access title="Acceso" size="sm" route="/home"></o-access>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>{{ layoutFour }}</code>
     </div>
   </app-viewer>
@@ -71,7 +71,7 @@
       <o-access title="Acceso" size="sm" route="/home"></o-access>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>{{ layoutFourTablet }}</code>
     </div>
   </app-viewer>
@@ -84,7 +84,7 @@
       <o-access title="Acceso" size="sm" route="/home"></o-access>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>{{ layoutThree }}</code>
     </div>
   </app-viewer>
@@ -97,7 +97,7 @@
       <o-access title="Acceso" size="sm" route="/home"></o-access>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>{{ layoutThreeTablet }}</code>
     </div>
   </app-viewer>
@@ -118,7 +118,7 @@
       </div>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>{{ layoutOne }}</code>
     </div>
   </app-viewer>
