--- a/src/app/modules/section-components/alert/pages/alert-examples/alert-examples.component.scss
+++ b/src/app/modules/section-components/alert/pages/alert-examples/alert-examples.component.scss
@@ -1,5 +1,6 @@
 .alert-container {
-  o-alert {
-    margin-bottom: 1rem;
-  }
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  max-width: 728px;
 }
