--- a/src/app/modules/section-components/badge/pages/badge-examples/badge-examples.component.html
+++ b/src/app/modules/section-components/badge/pages/badge-examples/badge-examples.component.html
@@ -8,7 +8,7 @@
       <o-badge type="danger">Etiqueta</o-badge>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>
         {{ badgeTypes }}
       </code>
@@ -20,7 +20,7 @@
       <o-badge route="#">Etiqueta con route</o-badge>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>
         {{ badgeLink }}
       </code>
