--- a/src/app/modules/section-components/card/pages/card-api/card-api.component.html
+++ b/src/app/modules/section-components/card/pages/card-api/card-api.component.html
@@ -142,7 +142,7 @@
         component-html
       >
         <button
-          class="btn btn-sm btn-outline-link btn-clipboard btn-icon"
+          class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"
         ></button>
         <code highlight-js>{{ sectionsVerticalHtml }}</code>
       </div>
@@ -152,7 +152,7 @@
         component-ts
       >
         <button
-          class="btn btn-sm btn-outline-link btn-clipboard btn-icon"
+          class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"
         ></button>
         <code highlight-js [lang]="'ts'" [lang]="'ts'">{{
           sectionsVerticalTs
@@ -167,7 +167,7 @@
         component-html
       >
         <button
-          class="btn btn-sm btn-outline-link btn-clipboard btn-icon"
+          class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"
         ></button>
         <code highlight-js>{{ sectionsHorizontalHtml }}</code>
       </div>
