--- a/src/app/modules/section-components/card/pages/card-examples/card-examples.component.html
+++ b/src/app/modules/section-components/card/pages/card-examples/card-examples.component.html
@@ -10,7 +10,7 @@
       ></o-card>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>{{ cardThemeHtml }}</code>
     </div>
   </app-viewer>
@@ -34,7 +34,7 @@
       ></o-card>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>{{ cardIconHtml }}</code>
     </div>
   </app-viewer>
@@ -58,7 +58,7 @@
       ></o-card>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>{{ cardImageHtml }}</code>
     </div>
   </app-viewer>
@@ -80,7 +80,7 @@
       ></o-card>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>{{ cardTextHtml }}</code>
     </div>
   </app-viewer>
@@ -99,7 +99,7 @@
       </o-card>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>{{ cardIconVerticalHtml }}</code>
     </div>
   </app-viewer>
@@ -116,7 +116,7 @@
       </o-card>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>{{ cardImageVerticalHtml }}</code>
     </div>
   </app-viewer>
@@ -146,7 +146,7 @@
       </o-card>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>{{ cardNewsHtml }}</code>
     </div>
   </app-viewer>
@@ -168,7 +168,7 @@
       </o-card>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>{{ cardEventHtml }}</code>
     </div>
   </app-viewer>
@@ -209,7 +209,7 @@
       ></o-card>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>{{ cardLayoutThree }}</code>
     </div>
   </app-viewer>
@@ -242,7 +242,7 @@
       ></o-card>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>{{ cardLayoutTwo }}</code>
     </div>
   </app-viewer>
