--- a/src/app/modules/section-components/collapse/pages/collapse-api/collapse-api.component.html
+++ b/src/app/modules/section-components/collapse/pages/collapse-api/collapse-api.component.html
@@ -139,7 +139,7 @@
         component-html
       >
         <button
-          class="btn btn-sm btn-outline-link btn-clipboard btn-icon"
+          class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"
         ></button>
         <code highlight-js>{{ sectionsExample }}</code>
       </div>
@@ -151,7 +151,7 @@
         component-html
       >
         <button
-          class="btn btn-sm btn-outline-link btn-clipboard btn-icon"
+          class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"
         ></button>
         <code highlight-js>{{ sectionsExampleInput }}</code>
       </div>
