--- a/src/app/modules/section-components/highlighted/pages/highlighted-api/highlighted-api.component.html
+++ b/src/app/modules/section-components/highlighted/pages/highlighted-api/highlighted-api.component.html
@@ -158,7 +158,7 @@
         component-html
       >
         <button
-          class="btn btn-sm btn-outline-link btn-clipboard btn-icon"
+          class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"
         ></button>
         <code highlight-js>{{ sectionsImageHtml }}</code>
       </div>
@@ -168,7 +168,7 @@
         component-ts
       >
         <button
-          class="btn btn-sm btn-outline-link btn-clipboard btn-icon"
+          class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"
         ></button>
         <code highlight-js [lang]="'ts'" [lang]="'ts'">{{
           sectionsImageTs
@@ -183,7 +183,7 @@
         component-html
       >
         <button
-          class="btn btn-sm btn-outline-link btn-clipboard btn-icon"
+          class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"
         ></button>
         <code highlight-js>{{ sectionsVideoHtml }}</code>
       </div>
@@ -193,7 +193,7 @@
         component-ts
       >
         <button
-          class="btn btn-sm btn-outline-link btn-clipboard btn-icon"
+          class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"
         ></button>
         <code highlight-js [lang]="'ts'" [lang]="'ts'">{{
           sectionsVideoTs
