--- a/src/app/modules/section-components/map/pages/map-api/map-api.component.html
+++ b/src/app/modules/section-components/map/pages/map-api/map-api.component.html
@@ -97,7 +97,7 @@
         component-html
       >
         <button
-          class="btn btn-sm btn-outline-link btn-clipboard btn-icon"
+          class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"
         ></button>
         <code highlight-js>{{ mapSectionsHtml }}</code>
       </div>
@@ -107,7 +107,7 @@
         component-ts
       >
         <button
-          class="btn btn-sm btn-outline-link btn-clipboard btn-icon"
+          class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"
         ></button>
         <code highlight-js [lang]="'ts'" [lang]="'ts'">{{
           mapSectionsTs
