--- a/src/app/modules/section-components/navbar/pages/navbar-examples/navbar-examples.component.html
+++ b/src/app/modules/section-components/navbar/pages/navbar-examples/navbar-examples.component.html
@@ -4,11 +4,11 @@
       <o-navbar component id="navbarOne" [routes]="routes" [routesLogin]="routesLogin"></o-navbar>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard">Copiar</button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard">Copiar</button>
       <code highlight-js>{{ navbarSectionsExampleHtml }}</code>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-ts>
-      <button class="btn btn-sm btn-outline-link btn-clipboard">Copiar</button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard">Copiar</button>
       <code highlight-js [lang]="'ts'">{{ navbarSectionsExampleTs }}</code>
     </div>
   </app-viewer>
@@ -18,11 +18,11 @@
       <o-navbar component id="navbarTwo" [routesExtended]="routesExtended" [routesLogin]="routesLogin"></o-navbar>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard">Copiar</button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard">Copiar</button>
       <code highlight-js>{{ navbarSectionsExtendedExampleHtml }}</code>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-ts>
-      <button class="btn btn-sm btn-outline-link btn-clipboard">Copiar</button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard">Copiar</button>
       <code highlight-js [lang]="'ts'">{{ navbarSectionsExtendedExampleTs }}</code>
     </div>
   </app-viewer>
@@ -32,11 +32,11 @@
       <o-navbar component id="navbarThree" [routes]="routes" [routesAccount]="routesAccount"></o-navbar>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard">Copiar</button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard">Copiar</button>
       <code highlight-js>{{ navbarLoginExampleHtml }}</code>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-ts>
-      <button class="btn btn-sm btn-outline-link btn-clipboard">Copiar</button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard">Copiar</button>
       <code highlight-js [lang]="'ts'">{{ navbarLoginExampleTs }}</code>
     </div>
   </app-viewer>
@@ -46,11 +46,11 @@
       <o-navbar component id="navbarFour" [routesExtended]="routesExtended" [routesAccount]="routesAccount"></o-navbar>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard">Copiar</button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard">Copiar</button>
       <code highlight-js>{{ navbarExtendedLoginExampleHtml }}</code>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-ts>
-      <button class="btn btn-sm btn-outline-link btn-clipboard">Copiar</button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard">Copiar</button>
       <code highlight-js [lang]="'ts'">{{ navbarExtendedLoginExampleTs }}</code>
     </div>
   </app-viewer>
@@ -60,11 +60,11 @@
       <o-navbar component id="navbarFive" [routes]="routes" [searchbarItems]="searchbarItems"></o-navbar>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard">Copiar</button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard">Copiar</button>
       <code highlight-js>{{ navbarSearchbarExampleHtml }}</code>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-ts>
-      <button class="btn btn-sm btn-outline-link btn-clipboard">Copiar</button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard">Copiar</button>
       <code highlight-js [lang]="'ts'">{{ navbarSearchbarExampleTs }}</code>
     </div>
   </app-viewer>
