--- a/projects/ngx-obelisco-v17/alert/o-alert.component.html
+++ b/projects/ngx-obelisco-v17/alert/o-alert.component.html
@@ -29,7 +29,7 @@
 
   <ng-container *ngIf="oCustomContent" [ngTemplateOutlet]="oCustomContent.template"> </ng-container>
 
-  <button *ngIf="isDismissible" type="button" class="close" data-dismiss="alert" aria-label="Cerrar">
+  <button *ngIf="isDismissible" type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Cerrar">
     <span class="material-symbols-rounded o-icon" aria-hidden="true">close</span>
   </button>
 
