--- a/src/app/modules/section-components/block/pages/block-examples/block-examples.component.html
+++ b/src/app/modules/section-components/block/pages/block-examples/block-examples.component.html
@@ -6,7 +6,7 @@
       </o-block>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>{{ blockTitle }}</code>
     </div>
   </app-viewer>
@@ -21,7 +21,7 @@
       </o-block>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>{{ blockDescription }}</code>
     </div>
   </app-viewer>
@@ -34,7 +34,7 @@
       </o-block>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>{{ blockProgressBar }}</code>
     </div>
   </app-viewer>
@@ -46,7 +46,7 @@
       </o-block>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>{{ blockBg }}</code>
     </div>
   </app-viewer>
