--- a/src/app/modules/section-components/collapse/pages/collapse-examples/collapse-examples.component.html
+++ b/src/app/modules/section-components/collapse/pages/collapse-examples/collapse-examples.component.html
@@ -18,7 +18,7 @@
       ></o-collapse>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>{{ collapseMultipleHtml }}</code>
     </div>
   </app-viewer>
@@ -48,7 +48,7 @@
       </o-collapse>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>{{ collapseUniqueHtml }}</code>
     </div>
   </app-viewer>
@@ -65,7 +65,7 @@
     </div>
 
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>{{ collapseWhiteHtml }}</code>
     </div>
   </app-viewer>
@@ -82,7 +82,7 @@
     </o-collapse>
 
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>{{ collapseIconExampleHtml }}</code>
     </div>
   </app-viewer>
@@ -99,7 +99,7 @@
     >
     </o-collapse>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>{{ collapseIconLabelExampleHtml }}</code>
     </div>
   </app-viewer>
@@ -113,7 +113,7 @@
       content="Esta es la descripción que se encuentra dentro de un colapsable."
     ></o-collapse>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>{{ collapseTextExampleHtml }}</code>
     </div>
   </app-viewer>
@@ -139,7 +139,7 @@
     >
     </o-collapse>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>{{ collapseListExampleHtml }}</code>
     </div>
   </app-viewer>
@@ -171,7 +171,7 @@
     >
     </o-collapse>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>{{ collapseListInputsExampleHtml }}</code>
     </div>
   </app-viewer>
