--- a/src/app/modules/section-components/custom-content/pages/custom-content-examples/custom-content-examples.component.html
+++ b/src/app/modules/section-components/custom-content/pages/custom-content-examples/custom-content-examples.component.html
@@ -16,7 +16,7 @@
       </o-block>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>{{ oCustomContentHTML }}</code>
     </div>
   </app-viewer>
