--- a/src/app/modules/section-components/default-image/pages/default-image-examples/default-image-examples.component.html
+++ b/src/app/modules/section-components/default-image/pages/default-image-examples/default-image-examples.component.html
@@ -26,7 +26,7 @@
     </div>
 
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>{{ imageDefaultExample }}</code>
     </div>
   </app-viewer>
@@ -64,7 +64,7 @@
     </div>
 
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>{{ imageDefaultExample }}</code>
     </div>
   </app-viewer>
