--- a/src/app/modules/section-components/modal/pages/modal-examples/modal-examples.component.html
+++ b/src/app/modules/section-components/modal/pages/modal-examples/modal-examples.component.html
@@ -12,7 +12,7 @@
       </o-modal>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>{{ exampleModalConfirmationHTML }}</code>
     </div>
   </app-viewer>
@@ -30,7 +30,7 @@
       </o-modal>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>{{ exampleModalDangerHTML }}</code>
     </div>
   </app-viewer>
@@ -48,7 +48,7 @@
       </o-modal>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>{{ exampleModalRecognitionHTML }}</code>
     </div>
   </app-viewer>
