--- a/src/app/modules/section-components/navigation/navigation-vertical/pages/navigation-vertical-examples/navigation-vertical-examples.component.html
+++ b/src/app/modules/section-components/navigation/navigation-vertical/pages/navigation-vertical-examples/navigation-vertical-examples.component.html
@@ -2,13 +2,13 @@
   <app-viewer title="Simple" [isNavCode]="true">
     <o-nav-vertical component [navVertItems]="navigationSimpleComponent"></o-nav-vertical>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>
         {{ simpleHTML }}
       </code>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-ts>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js [lang]="'ts'">
         {{ exampleTs }}
       </code>
@@ -18,13 +18,13 @@
   <app-viewer title="Simple con icono" [isNavCode]="true">
     <o-nav-vertical component [navVertItems]="navigationSimpleIconComponent"></o-nav-vertical>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>
         {{ simpleHTML }}
       </code>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-ts>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js [lang]="'ts'">
         {{ exampleTsIcon }}
       </code>
@@ -34,13 +34,13 @@
   <app-viewer title="Con dos niveles" [isNavCode]="true">
     <o-nav-vertical component [navVertItems]="levelTwoComponent"></o-nav-vertical>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>
         {{ simpleHTML }}
       </code>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-ts>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js [lang]="'ts'">
         {{ exampleTsTwo }}
       </code>
@@ -50,13 +50,13 @@
   <app-viewer title="Con dos niveles e icono" [isNavCode]="true">
     <o-nav-vertical component [navVertItems]="levelTwoIconComponent"></o-nav-vertical>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>
         {{ simpleHTML }}
       </code>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-ts>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js [lang]="'ts'">
         {{ exampleTsTwoIcon }}
       </code>
@@ -66,13 +66,13 @@
   <app-viewer title="Con tres niveles" [isNavCode]="true">
     <o-nav-vertical component [navVertItems]="levelThreeComponent"></o-nav-vertical>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>
         {{ simpleHTML }}
       </code>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-ts>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js [lang]="'ts'">
         {{ exampleTsThree }}
       </code>
@@ -81,13 +81,13 @@
   <app-viewer title="Con tres niveles e icono" [isNavCode]="true">
     <o-nav-vertical component [navVertItems]="levelThreeIconComponent"></o-nav-vertical>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>
         {{ simpleHTML }}
       </code>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-ts>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js [lang]="'ts'">
         {{ exampleTsThreeIcon }}
       </code>
