--- a/src/app/modules/section-components/search/pages/search-examples/search-examples.component.html
+++ b/src/app/modules/section-components/search/pages/search-examples/search-examples.component.html
@@ -4,11 +4,11 @@
       <o-search [searchbarItems]="routes" [onSelectItem]="handleSelectItem"></o-search>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard">Copiar</button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard">Copiar</button>
       <code highlight-js>{{ searchExampleHtml }}</code>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-ts>
-      <button class="btn btn-sm btn-outline-link btn-clipboard">Copiar</button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard">Copiar</button>
       <code highlight-js [lang]="'ts'">{{ searchExampleTs }}</code>
     </div>
   </app-viewer>
@@ -18,11 +18,11 @@
       <o-search [searchbarItems]="routes"></o-search>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard">Copiar</button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard">Copiar</button>
       <code highlight-js>{{ searchExampleHtml }}</code>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-ts>
-      <button class="btn btn-sm btn-outline-link btn-clipboard">Copiar</button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard">Copiar</button>
       <code highlight-js [lang]="'ts'">{{ searchExampleTs }}</code>
     </div>
   </app-viewer>
