--- a/src/app/modules/section-components/spinner/pages/spinner-examples/spinner-examples.component.html
+++ b/src/app/modules/section-components/spinner/pages/spinner-examples/spinner-examples.component.html
@@ -10,7 +10,7 @@
       <o-spinner type="dark"></o-spinner>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>
         {{ exampleColors }}
       </code>
@@ -24,7 +24,7 @@
       <o-spinner size="lg"></o-spinner>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>
         {{ exampleSizes }}
       </code>
@@ -38,7 +38,7 @@
       </div>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>
         {{ exampleBlock }}
       </code>
@@ -51,7 +51,7 @@
       <small class="mt-2">Cargando...</small>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>
         {{ exampleMessage }}
       </code>
