--- a/src/app/modules/section-components/status-message/pages/status-message-example/status-message-example.component.html
+++ b/src/app/modules/section-components/status-message/pages/status-message-example/status-message-example.component.html
@@ -37,13 +37,13 @@
     </div>
 
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>
         {{ statusMessage.exampleHTML }}
       </code>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-ts>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js [lang]="'ts'">
         {{ statusMessage.exampleTS }}
       </code>
