--- a/src/app/modules/section-components/steps-form/pages/steps-form-examples/steps-form-examples.component.html
+++ b/src/app/modules/section-components/steps-form/pages/steps-form-examples/steps-form-examples.component.html
@@ -7,14 +7,14 @@
       <button class="btn btn-sm btn-link" (click)="nextStep()">Siguiente</button>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>
         {{ exmapleDirectiveHTML }}
       </code>
     </div>
 
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-ts>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js [lang]="'ts'">
         {{ exmapleDirectiveTS }}
       </code>
@@ -38,14 +38,14 @@
       <button class="btn btn-sm btn-link" (click)="nextStepExample()">Siguiente</button>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>
         {{ exmapleFunctionalityHTML }}
       </code>
     </div>
 
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-ts>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js [lang]="'ts'">
         {{ exmapleFunctionalityTS }}
       </code>
