--- a/src/app/modules/section-components/switch/pages/switch-examples/switch-examples.component.html
+++ b/src/app/modules/section-components/switch/pages/switch-examples/switch-examples.component.html
@@ -5,7 +5,7 @@
       <o-switch [switchValue]="true"></o-switch>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>
         {{ exampleDefault }}
       </code>
@@ -17,7 +17,7 @@
       <o-switch [id]="'example'" [labelOff]="'Apagado'" [labelOn]="'Prendido'"></o-switch>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>
         {{ exampleWithLabel }}
       </code>
@@ -30,7 +30,7 @@
       <o-switch [switchValue]="true" [isDark]="true"></o-switch>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>
         {{ exampleDark }}
       </code>
@@ -43,7 +43,7 @@
       <o-switch [switchValue]="true" [isSmall]="true"></o-switch>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>
         {{ exampleSmall }}
       </code>
@@ -56,7 +56,7 @@
       <o-switch [switchValue]="true" [isFixed]="true"></o-switch>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>
         {{ exampleChecked }}
       </code>
@@ -69,7 +69,7 @@
       <o-switch [isDisabled]="true" [labelOn]="'Prendido'" [switchValue]="true"></o-switch>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>
         {{ exampleDisabled }}
       </code>
