--- a/src/app/modules/section-components/tooltip/pages/tooltip-examples/tooltip-examples.component.html
+++ b/src/app/modules/section-components/tooltip/pages/tooltip-examples/tooltip-examples.component.html
@@ -28,13 +28,13 @@
       </ng-container>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js>
         {{ tooltip.exampleHTML }}
       </code>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-ts>
-      <button class="btn btn-sm btn-outline-link btn-clipboard btn-icon"></button>
+      <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
       <code highlight-js [lang]="'ts'">
         {{ tooltip.exampleTS }}
       </code>
